--- a/CGFlowAnimationDemo/Main_iPhone.storyboard
+++ b/CGFlowAnimationDemo/Main_iPhone.storyboard
@@ -119,7 +119,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Rz7-6R-69l" kind="custom" identifier="srcTopCustomSegue" customClass="CGFlowSegueSlideDown" id="Cu2-XM-U9d"/>
+                                    <segue destination="Rz7-6R-69l" kind="custom" identifier="srcTopCustomSegue" customClass="CGFlowSegueFlipDown" id="Cu2-XM-U9d"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CFz-SA-UPt">
@@ -133,7 +133,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="NI8-74-EdV" kind="custom" identifier="srcBottomCustomSegue" customClass="CGFlowSegueSlideUp" id="6F1-9r-0nH"/>
+                                    <segue destination="NI8-74-EdV" kind="custom" identifier="srcBottomCustomSegue" customClass="CGFlowSegueFlipUp" id="6F1-9r-0nH"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -331,7 +331,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="6F1-9r-0nH"/>
         <segue reference="Cu2-XM-U9d"/>
-        <segue reference="MSl-Em-Eg7"/>
+        <segue reference="onp-FF-wcm"/>
         <segue reference="jW1-kd-Wwu"/>
     </inferredMetricsTieBreakers>
 </document>
